Removed unused bucket of OfflinePages.PrefetchUsage

The "has pages" bucket of the OfflinePages.PrefetchUsage histogram never
had data collected into it. We finally decided to fully remove it as the
information it would provide doesn't seem to justify the extra costs and
changes associated with adding the proper trigger to report it.

Bug: 860830
Change-Id: I837e5f4e6184175841773450e44eaedde94513e3
Reviewed-on: https://chromium-review.googlesource.com/1157281
Reviewed-by: Dmitry Titov <dimich@chromium.org>
Reviewed-by: Ramin Halavati <rhalavati@chromium.org>
Commit-Queue: Carlos Knippschild <carlosk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579945}
Former-commit-id: d0f379fd28d7e266b921cb89e77fe58e67d9e378