chrome/browser/offline_pages/prefetch/offline_metrics_collector_impl_unittest.cc
@@ -63,7 +63,6 @@ TEST_F(OfflineMetricsCollectorTest, CheckCleanInit) {
   EXPECT_EQ(false, prefs().GetBoolean(prefs::kOfflineUsageOnlineObserved));
 
   EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageEnabledObserved));
-  EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageHasPagesObserved));
   EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageFetchObserved));
   EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageOpenObserved));
 
@@ -74,7 +73,6 @@ TEST_F(OfflineMetricsCollectorTest, CheckCleanInit) {
   EXPECT_EQ(0, prefs().GetInteger(prefs::kOfflineUsageMixedCount));
 
   EXPECT_EQ(0, prefs().GetInteger(prefs::kPrefetchUsageEnabledCount));
-  EXPECT_EQ(0, prefs().GetInteger(prefs::kPrefetchUsageHasPagesCount));
   EXPECT_EQ(0, prefs().GetInteger(prefs::kPrefetchUsageFetchedCount));
   EXPECT_EQ(0, prefs().GetInteger(prefs::kPrefetchUsageOpenedCount));
   EXPECT_EQ(0, prefs().GetInteger(prefs::kPrefetchUsageMixedCount));
@@ -119,22 +117,14 @@ TEST_F(OfflineMetricsCollectorTest, SetTrackingFlags) {
 TEST_F(OfflineMetricsCollectorTest, SetTrackingFlagsPrefech) {
   collector()->OnPrefetchEnabled();
   EXPECT_EQ(true, prefs().GetBoolean(prefs::kPrefetchUsageEnabledObserved));
-  EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageHasPagesObserved));
-  EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageFetchObserved));
-  EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageOpenObserved));
-  collector()->OnHasPrefetchedPagesDetected();
-  EXPECT_EQ(true, prefs().GetBoolean(prefs::kPrefetchUsageEnabledObserved));
-  EXPECT_EQ(true, prefs().GetBoolean(prefs::kPrefetchUsageHasPagesObserved));
   EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageFetchObserved));
   EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageOpenObserved));
   collector()->OnSuccessfulPagePrefetch();
   EXPECT_EQ(true, prefs().GetBoolean(prefs::kPrefetchUsageEnabledObserved));
-  EXPECT_EQ(true, prefs().GetBoolean(prefs::kPrefetchUsageHasPagesObserved));
   EXPECT_EQ(true, prefs().GetBoolean(prefs::kPrefetchUsageFetchObserved));
   EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageOpenObserved));
   collector()->OnPrefetchedPageOpened();
   EXPECT_EQ(true, prefs().GetBoolean(prefs::kPrefetchUsageEnabledObserved));
-  EXPECT_EQ(true, prefs().GetBoolean(prefs::kPrefetchUsageHasPagesObserved));
   EXPECT_EQ(true, prefs().GetBoolean(prefs::kPrefetchUsageFetchObserved));
   EXPECT_EQ(true, prefs().GetBoolean(prefs::kPrefetchUsageOpenObserved));
 }
@@ -200,39 +190,33 @@ TEST_F(OfflineMetricsCollectorTest, RestoreFromPrefs) {
 TEST_F(OfflineMetricsCollectorTest, RestoreFromPrefsPrefetch) {
   collector()->OnPrefetchEnabled();
   EXPECT_EQ(true, prefs().GetBoolean(prefs::kPrefetchUsageEnabledObserved));
-  EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageHasPagesObserved));
   EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageFetchObserved));
   EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageOpenObserved));
 
   prefs().SetInteger(prefs::kPrefetchUsageEnabledCount, 1);
-  prefs().SetInteger(prefs::kPrefetchUsageHasPagesCount, 2);
-  prefs().SetInteger(prefs::kPrefetchUsageFetchedCount, 3);
-  prefs().SetInteger(prefs::kPrefetchUsageOpenedCount, 4);
-  prefs().SetInteger(prefs::kPrefetchUsageMixedCount, 5);
+  prefs().SetInteger(prefs::kPrefetchUsageFetchedCount, 2);
+  prefs().SetInteger(prefs::kPrefetchUsageOpenedCount, 3);
+  prefs().SetInteger(prefs::kPrefetchUsageMixedCount, 4);
 
   Reload();
   collector()->OnSuccessfulPagePrefetch();
   EXPECT_EQ(true, prefs().GetBoolean(prefs::kPrefetchUsageEnabledObserved));
-  EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageHasPagesObserved));
   EXPECT_EQ(true, prefs().GetBoolean(prefs::kPrefetchUsageFetchObserved));
   EXPECT_EQ(false, prefs().GetBoolean(prefs::kPrefetchUsageOpenObserved));
 
   collector()->ReportAccumulatedStats();
   histograms().ExpectBucketCount("OfflinePages.PrefetchEnabled", true, 1);
   histograms().ExpectBucketCount("OfflinePages.PrefetchUsage",
-                                 0 /* PrefetchUsageType::HAS_PAGES */, 2);
-  histograms().ExpectBucketCount("OfflinePages.PrefetchUsage",
                                  1 /* PrefetchUsageType::FETCHED_NEW_PAGES */,
-                                 3);
+                                 2);
   histograms().ExpectBucketCount("OfflinePages.PrefetchUsage",
-                                 2 /* PrefetchUsageType::OPENED_PAGES */, 4);
+                                 2 /* PrefetchUsageType::OPENED_PAGES */, 3);
   histograms().ExpectBucketCount(
       "OfflinePages.PrefetchUsage",
-      3 /* PrefetchUsageType::FETCHED_AND_OPENED_PAGES */, 5);
+      3 /* PrefetchUsageType::FETCHED_AND_OPENED_PAGES */, 4);
 
   // After reporting, counters should be reset.
   EXPECT_EQ(0, prefs().GetInteger(prefs::kPrefetchUsageEnabledCount));
-  EXPECT_EQ(0, prefs().GetInteger(prefs::kPrefetchUsageHasPagesCount));
   EXPECT_EQ(0, prefs().GetInteger(prefs::kPrefetchUsageFetchedCount));
   EXPECT_EQ(0, prefs().GetInteger(prefs::kPrefetchUsageOpenedCount));
   EXPECT_EQ(0, prefs().GetInteger(prefs::kPrefetchUsageMixedCount));
@@ -314,17 +298,13 @@ TEST_F(OfflineMetricsCollectorTest, OverDayBoundaryPrefetch) {
   collector()->OnPrefetchEnabled();
 
   test_clock().SetNow(start + base::TimeDelta::FromDays(2));
-  collector()->OnHasPrefetchedPagesDetected();
-
-  test_clock().SetNow(start + base::TimeDelta::FromDays(3));
   collector()->OnSuccessfulPagePrefetch();
 
-  test_clock().SetNow(start + base::TimeDelta::FromDays(4));
+  test_clock().SetNow(start + base::TimeDelta::FromDays(3));
   collector()->OnPrefetchedPageOpened();
 
-  test_clock().SetNow(start + base::TimeDelta::FromDays(5));
+  test_clock().SetNow(start + base::TimeDelta::FromDays(4));
   collector()->OnPrefetchEnabled();
-  collector()->OnHasPrefetchedPagesDetected();
   collector()->OnSuccessfulPagePrefetch();
   collector()->OnPrefetchedPageOpened();
 
@@ -334,8 +314,6 @@ TEST_F(OfflineMetricsCollectorTest, OverDayBoundaryPrefetch) {
   // Force collector to report stats and observe them reported correctly.
   collector()->ReportAccumulatedStats();
   histograms().ExpectBucketCount("OfflinePages.PrefetchEnabled", true, 3);
-  histograms().ExpectBucketCount("OfflinePages.PrefetchUsage",
-                                 0 /* PrefetchUsageType::HAS_PAGES */, 1);
   histograms().ExpectBucketCount("OfflinePages.PrefetchUsage",
                                  1 /* PrefetchUsageType::FETCHED_NEW_PAGES */,
                                  1);
