components/offline_pages/core/prefetch/test_offline_metrics_collector.h
@@ -21,7 +21,6 @@ class TestOfflineMetricsCollector : public OfflineMetricsCollector {
   void OnSuccessfulNavigationOnline() override {}
   void OnSuccessfulNavigationOffline() override {}
   void OnPrefetchEnabled() override {}
-  void OnHasPrefetchedPagesDetected() override {}
   void OnSuccessfulPagePrefetch() override {}
   void OnPrefetchedPageOpened() override {}
   void ReportAccumulatedStats() override {}
